# deepiri-axiom

./: .gitignore  LICENSE  Makefile  README.md  install.py  pyproject.toml  setup.py  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
cli/: __init__.py  __main__.py  installer.py  main.py  repo_cartography.py  skills_installer.py
docs/: ECOSYSTEM.md
ecosystem/: __init__.py  apps.py  catalog.py  devices.py  doctor.py  github_catalog.py  link_inference.py  manifest.py  providers.py  repos.py  scanner.py
prompts/: axiom-branch-tools.md  axiom-condensed.md  axiom-core.md  copilot-brief.md  deepiri-context.md  ecosystem-guide.md
scripts/: generate_skills.py  install-subagent-here.sh
skills/: README.md
skills/axiom-architect/: SKILL.md
skills/axiom-debug/: SKILL.md
skills/axiom-refactor/: SKILL.md
skills/axiom-review/: SKILL.md
skills/axiom-scan/: SKILL.md
skills/deepiri-aarflingo/: SKILL.md
skills/deepiri-api-gateway/: SKILL.md
skills/deepiri-axiom/: SKILL.md.j2
skills/deepiri-boardman/: SKILL.md
skills/deepiri-cascade/: SKILL.md
skills/deepiri-compose-dev/: SKILL.md
templates/: claude.md.j2  copilot-instructions.md.j2  cursor-agent.md.j2  cursor-rule.md.j2  gemini.md.j2  opencode-instructions.md.j2
tests/: conftest.py  test_apps.py  test_cartography.py  test_catalog.py  test_cli.py  test_devices.py  test_doctor.py  test_installer.py  test_link_inference.py  test_manifest.py  test_providers.py  test_repos.py  test_scanner.py  test_skills_installer.py
(+55 files in other folders)
